theory - new outline

--- a/appendices.tex
+++ b/appendices.tex
@@ -39,6 +39,7 @@ FEM 		& Finite-element method (numerical simulation)\\
 FFT 		& Fast Fourier transform (algorithm)\\
 FRoI 		& Frequency range of interest\\
 FDM 		& Filter diagonalisation method (algorithm)\\
+IFC			& Isofrequency contours\\
 MM			& Metamaterial\\
 NRW 		& Nicolson-Ross-Weir (method for effective parameter retrieval)\\
 PBG			& Photonic band-gap\\
