--- a/t.tex
+++ b/t.tex
@@ -30,20 +30,20 @@
 \chapter{Theory}
 \input{theory.tex}
 
- \chapter{Numerical methods}
- \input{numeric.tex}
- 
- \chapter{Experimental methods}
- \input{expe.tex}
- 
- \chapter{Results}
- \input{result.tex}
- 
- \chapter{Conclusion}
- \input{conclusion.tex}
+ %\chapter{Numerical methods}
+ %\input{numeric.tex}
  %
- \chapter{Appendices}
- \input{appendices.tex}
+ %\chapter{Experimental methods}
+ %\input{expe.tex}
+ %
+ %\chapter{Results}
+ %\input{result.tex}
+ %
+ %\chapter{Conclusion}
+ %\input{conclusion.tex}
+ 
+ %\chapter{Appendices}
+ %\input{appendices.tex}
 
 \label{endtext} 
 \printbibliography
